--- a/SFT_DEMO.ipynb
+++ b/SFT_DEMO.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 99,
    "id": "51b962d5-3b98-408b-b132-2d5e73e6fa23",
    "metadata": {},
    "outputs": [
@@ -18,11 +18,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-12-31 15:06:46,295 - modelscope - WARNING - Model revision not specified, use revision: v1.0.0\n",
+      "2024-01-01 12:38:54,947 - modelscope - WARNING - Model revision not specified, use revision: v1.0.0\n",
       "Try importing flash-attention for faster inference...\n",
-      "Warning: import flash_attn rotary fail, please install FlashAttention rotary to get higher efficiency https://github.com/Dao-AILab/flash-attention/tree/main/csrc/rotary\n",
-      "Warning: import flash_attn rms_norm fail, please install FlashAttention layer_norm to get higher efficiency https://github.com/Dao-AILab/flash-attention/tree/main/csrc/layer_norm\n",
-      "Warning: import flash_attn fail, please install FlashAttention to get higher efficiency https://github.com/Dao-AILab/flash-attention\n"
+      "Warning: import flash_attn rms_norm fail, please install FlashAttention layer_norm to get higher efficiency https://github.com/Dao-AILab/flash-attention/tree/main/csrc/layer_norm\n"
      ]
     }
    ],
@@ -50,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 100,
    "id": "4cbb0900-6554-4751-bbc8-326fac486cbb",
    "metadata": {},
    "outputs": [],
@@ -63,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 101,
    "id": "b6338a20-6c9c-49fa-9f5b-9c606d747260",
    "metadata": {},
    "outputs": [
@@ -71,8 +69,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "city: 青岛\n",
-      "date: 1月2号\n"
+      "<xml>\n",
+      "    <city>青岛</city>\n",
+      "    <date>1月2日</date>\n",
+      "</xml>\n"
      ]
     }
    ],
@@ -80,14 +80,16 @@
     "Q='1月2号青岛天气预报'\n",
     "\n",
     "prompt_template='''\n",
-    "分析问题中出现过的城市和日期\n",
+    "分析问题中出现过的{城市}和{日期}\n",
     "\n",
     "交互格式如下：\n",
     "\n",
-    "问题: 用户的原始问题，里面可能包含了城市和日期信息\n",
-    "回答: 提炼问题中出现的城市名称和具体日期，按如下格式整理返回:\n",
-    "    city: 值是城市的名字\n",
-    "    date: 值是具体日期\n",
+    "问题: 用户的原始问题，里面可能包含了{城市}和{日期}信息\n",
+    "回答: 提炼问题中出现的{城市}和{日期}，按如下格式返回：\n",
+    "    <xml>\n",
+    "        <city>{城市}</city>\n",
+    "        <date>{日期}</date>\n",
+    "    </xml>\n",
     "\n",
     "现在开始。\n",
     "\n",
@@ -137,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 102,
    "id": "7a9673d1-3359-41ef-b851-a4be82765701",
    "metadata": {},
    "outputs": [
@@ -145,7 +147,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "样本数量: 1000\n"
+      "样本数量: 5000\n"
      ]
     }
    ],
@@ -166,10 +168,15 @@
     "    ('{year}年{month}月{day}号{city}的天气','%Y-%m-%d'),\n",
     "    ('{month}月{day}日{city}的天气','%m-%d'),\n",
     "    ('{month}月{day}号{city}的天气','%m-%d'),\n",
+    "\n",
+    "    ('你们{year}年{month}月{day}日去{city}玩吗？','%Y-%m-%d'),\n",
+    "    ('你们{year}年{month}月{day}号去{city}玩么？','%Y-%m-%d'),\n",
+    "    ('你们{month}月{day}日去{city}玩吗？','%m-%d'),\n",
+    "    ('你们{month}月{day}号去{city}玩吗？','%m-%d'),\n",
     "]\n",
     "\n",
     "# 生成一批\"1月2号\"、\"1月2日\"、\"2023年1月2号\", \"2023年1月2日\", \"2023-02-02\", \"03-02\"之类的话术, 教会它做日期转换\n",
-    "for i in range(1000):\n",
+    "for i in range(5000):\n",
     "    Q=Q_list[random.randint(0,len(Q_list)-1)]\n",
     "    city=city_list[random.randint(0,len(city_list)-1)]\n",
     "    year=random.randint(1990,2025)\n",
@@ -177,9 +184,10 @@
     "    day=random.randint(1,28)\n",
     "    time_str='{}-{}-{}'.format(year,month,day)\n",
     "    date_field=time.strftime(Q[1],time.strptime(time_str,'%Y-%m-%d'))\n",
-    "    \n",
     "    Q=Q[0].format(city=city,year=year,month=month,day=day) # 问题\n",
-    "    A='city:%s\\ndate:%s'%(city,date_field) # 回答\n",
+    "    A='<xml><city>%s</city><date>%s</date></xml>'%(city,date_field) # 回答\n",
+    "    #A='city:%s\\ndate:%s'%(city,date_field) # 回答\n",
+    "    #A=json.dumps({'city':city,'date':date_field})\n",
     "    example={\n",
     "        'id': 'identity_{}'.format(i),\n",
     "        'conversations':[\n",
@@ -221,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 103,
    "id": "60a4a4f0-32ef-4254-a3f1-31648e580fa6",
    "metadata": {},
    "outputs": [
@@ -230,9 +238,7 @@
      "output_type": "stream",
      "text": [
       "Try importing flash-attention for faster inference...\n",
-      "Warning: import flash_attn rotary fail, please install FlashAttention rotary to get higher efficiency https://github.com/Dao-AILab/flash-attention/tree/main/csrc/rotary\n",
-      "Warning: import flash_attn rms_norm fail, please install FlashAttention layer_norm to get higher efficiency https://github.com/Dao-AILab/flash-attention/tree/main/csrc/layer_norm\n",
-      "Warning: import flash_attn fail, please install FlashAttention to get higher efficiency https://github.com/Dao-AILab/flash-attention\n"
+      "Warning: import flash_attn rms_norm fail, please install FlashAttention layer_norm to get higher efficiency https://github.com/Dao-AILab/flash-attention/tree/main/csrc/layer_norm\n"
      ]
     }
    ],
@@ -248,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 104,
    "id": "5a053c4a-d8b1-44e9-b4f0-0906f9115333",
    "metadata": {},
    "outputs": [
@@ -257,41 +263,54 @@
      "output_type": "stream",
      "text": [
       "Q:2020年4月16号三亚下雨么？\n",
-      "A:city:三亚\n",
-      "date:2020-04-16\n",
+      "A:<xml><city>三亚</city><date>2020-04-16</date></xml>\n",
+      "XML:city=三亚 date=2020-04-16\n",
       "\n",
       "Q:青岛3-15号天气预报\n",
-      "A:city:青岛\n",
-      "date:03-15\n",
+      "A:<xml><city>青岛</city><date>03-15</date></xml>\n",
+      "XML:city=青岛 date=03-15\n",
       "\n",
       "Q:5月6号下雪么，城市是威海\n",
-      "A:city:威海\n",
-      "date:05-06\n",
+      "A:<xml><city>威海</city><date>05-06</date></xml>\n",
+      "XML:city=威海 date=05-06\n",
       "\n",
       "Q:青岛2023年12月30号有雾霾么?\n",
-      "A:city:青岛\n",
-      "date:2023-12-30\n",
+      "A:<xml><city>青岛</city><date>2023-12-30</date></xml>\n",
+      "XML:city=青岛 date=2023-12-30\n",
       "\n",
       "Q:我打算6月1号去北京旅游，请问天气怎么样？\n",
-      "A:city:北京市\n",
-      "date:06-01\n",
+      "A:<xml><city>北京</city><date>06-01</date></xml>\n",
+      "XML:city=北京 date=06-01\n",
+      "\n",
+      "Q:你们打算1月3号坐哪一趟航班去上海？\n",
+      "A:<xml><city>上海</city><date>01-03</date></xml>\n",
+      "XML:city=上海 date=01-03\n",
+      "\n",
+      "Q:小明和小红是8月8号在上海结婚么?\n",
+      "A:<xml><city>上海</city><date>08-08</date></xml>\n",
+      "XML:city=上海 date=08-08\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "import xml.etree.ElementTree as ET\n",
+    "\n",
     "model.generation_config.top_p=0 # 只选择概率最高的token\n",
     "\n",
-    "Q_list=['2020年4月16号三亚下雨么？','青岛3-15号天气预报','5月6号下雪么，城市是威海','青岛2023年12月30号有雾霾么?','我打算6月1号去北京旅游，请问天气怎么样？']\n",
+    "Q_list=['2020年4月16号三亚下雨么？','青岛3-15号天气预报','5月6号下雪么，城市是威海','青岛2023年12月30号有雾霾么?','我打算6月1号去北京旅游，请问天气怎么样？','你们打算1月3号坐哪一趟航班去上海？','小明和小红是8月8号在上海结婚么?']\n",
     "for Q in Q_list:\n",
     "    prompt=prompt_template%(Q,)\n",
-    "    resp,hist=model.chat(tokenizer,prompt,history=None)\n",
-    "    print('Q:%s\\nA:%s\\n'%(Q,resp))"
+    "    A,hist=model.chat(tokenizer,prompt,history=None)\n",
+    "    root=ET.fromstring(A)\n",
+    "    city=root.find('city').text\n",
+    "    date=root.find('date').text\n",
+    "    print('Q:%s\\nA:%s\\nXML:city=%s date=%s\\n'%(Q,A,city,date))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 105,
    "id": "39e860c1-4572-456d-aedc-703f192f599a",
    "metadata": {},
    "outputs": [
@@ -300,10 +319,18 @@
      "output_type": "stream",
      "text": [
       "青岛海边钓鱼需要注意以下几点：\n",
-      "1、选择合适的地点：青岛海边的鱼塘一般分为几个区域，每个区域都有自己的特点和优势。比如北部海域水质较好，适合鱼类生长；南部海域水质较差，适合鱼类避风。\n",
-      "2、选择合适的季节：青岛海边钓鱼的最佳季节是春季和秋季，这两个季节温度适宜，而且海风较大，有利于鱼类的活动。\n",
-      "3、选择合适的工具：青岛海边钓鱼常用的工具包括钓竿、饵料、鱼线、鱼钩等。其中钓竿的选择要根据个人的技术水平来定，饵料的选择要根据当地的海洋环境来定。\n",
-      "4、注意安全：青岛海边钓鱼时要注意安全，不要在危险的地方钓鱼，也不要随意丢弃垃圾。\n"
+      "\n",
+      "1. 遵守规定：在青岛海边钓鱼，必须遵守当地的法律法规和公园管理规定。禁止在禁钓区钓鱼，禁止破坏海洋生态环境。\n",
+      "\n",
+      "2. 穿戴合适的装备：为了保护自己免受海风、海水和阳光的伤害，建议穿着适合海滩环境的衣物，如短袖、长裤、防晒帽等。\n",
+      "\n",
+      "3. 注意安全：在海边钓鱼时，要注意自身安全，避免发生溺水事故。同时，也要注意周围环境的安全，避免被风吹倒或被海浪冲走。\n",
+      "\n",
+      "4. 选择合适的地点：青岛海边有多个不同的钓鱼地点，可以根据自己的喜好和经验选择合适的地点。一般来说，选择靠近海岸线的地方更容易找到鱼儿。\n",
+      "\n",
+      "5. 注意天气变化：青岛海边的天气变化非常快，因此在钓鱼前要关注天气预报，以便及时调整钓鱼计划。\n",
+      "\n",
+      "6. 尊重自然：青岛海边是大自然的一部分，我们应该尊重自然，不要随意破坏海洋生态环境。\n"
      ]
     }
    ],
