--- a/SFT_DEMO.ipynb
+++ b/SFT_DEMO.ipynb
@@ -1,6 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "408e4b71-7896-4bb7-a22f-169055950115",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking in indexes: http://mirrors.cloud.aliyuncs.com/pypi/simple/\n",
+      "Collecting openpyxl\n",
+      "  Downloading http://mirrors.cloud.aliyuncs.com/pypi/packages/6a/94/a59521de836ef0da54aaf50da6c4da8fb4072fb3053fa71f052fd9399e7a/openpyxl-3.1.2-py2.py3-none-any.whl (249 kB)\n",
+      "\u001b[K     |████████████████████████████████| 249 kB 110.7 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting et-xmlfile\n",
+      "  Downloading http://mirrors.cloud.aliyuncs.com/pypi/packages/96/c2/3dd434b0108730014f1b96fd286040dc3bcb70066346f7e01ec2ac95865f/et_xmlfile-1.1.0-py3-none-any.whl (4.7 kB)\n",
+      "Installing collected packages: et-xmlfile, openpyxl\n",
+      "Successfully installed et-xmlfile-1.1.0 openpyxl-3.1.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install openpyxl"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "db5d3b4a-43af-43ec-afd1-545e15febfe8",
    "metadata": {},
@@ -10,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 157,
    "id": "51b962d5-3b98-408b-b132-2d5e73e6fa23",
    "metadata": {},
    "outputs": [
@@ -18,9 +43,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-01 12:38:54,947 - modelscope - WARNING - Model revision not specified, use revision: v1.0.0\n",
-      "Try importing flash-attention for faster inference...\n",
-      "Warning: import flash_attn rms_norm fail, please install FlashAttention layer_norm to get higher efficiency https://github.com/Dao-AILab/flash-attention/tree/main/csrc/layer_norm\n"
+      "2024-01-06 21:06:27,395 - modelscope - WARNING - Model revision not specified, use revision: v1.0.0\n",
+      "Try importing flash-attention for faster inference...\n"
      ]
     }
    ],
@@ -48,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 158,
    "id": "4cbb0900-6554-4751-bbc8-326fac486cbb",
    "metadata": {},
    "outputs": [],
@@ -61,47 +85,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 159,
    "id": "b6338a20-6c9c-49fa-9f5b-9c606d747260",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<xml>\n",
-      "    <city>青岛</city>\n",
-      "    <date>1月2日</date>\n",
-      "</xml>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Q='1月2号青岛天气预报'\n",
+    "Q='青岛4月6日下雨么?'\n",
     "\n",
     "prompt_template='''\n",
-    "分析问题中出现过的{城市}和{日期}\n",
+    "给定一句话：“%s”，请你按步骤要求工作。\n",
     "\n",
-    "交互格式如下：\n",
+    "步骤1：识别这句话中的城市和日期共2个信息\n",
+    "步骤2：根据城市和日期信息，生成JSON字符串，格式为{\"city\":城市,\"date\":日期}\n",
     "\n",
-    "问题: 用户的原始问题，里面可能包含了{城市}和{日期}信息\n",
-    "回答: 提炼问题中出现的{城市}和{日期}，按如下格式返回：\n",
-    "    <xml>\n",
-    "        <city>{城市}</city>\n",
-    "        <date>{日期}</date>\n",
-    "    </xml>\n",
-    "\n",
-    "现在开始。\n",
-    "\n",
-    "问题: %s\n",
-    "回答: \n",
-    "'''\n",
-    "\n",
-    "prompt=prompt_template%(Q,)\n",
-    "#print(prompt)\n",
-    "\n",
-    "resp,hist=model.chat(tokenizer,prompt,history=None)\n",
-    "print(resp)"
+    "请问，这个JSON字符串是：\n",
+    "'''"
    ]
   },
   {
@@ -139,24 +137,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 160,
    "id": "7a9673d1-3359-41ef-b851-a4be82765701",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "样本数量: 5000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "import json\n",
     "import time \n",
     "\n",
-    "train_data=[]\n",
+    "Q_arr=[]\n",
+    "A_arr=[]\n",
     "\n",
     "Q_list=[\n",
     "    ('{city}{year}年{month}月{day}日的天气','%Y-%m-%d'),\n",
@@ -176,7 +167,7 @@
     "]\n",
     "\n",
     "# 生成一批\"1月2号\"、\"1月2日\"、\"2023年1月2号\", \"2023年1月2日\", \"2023-02-02\", \"03-02\"之类的话术, 教会它做日期转换\n",
-    "for i in range(5000):\n",
+    "for i in range(1000):\n",
     "    Q=Q_list[random.randint(0,len(Q_list)-1)]\n",
     "    city=city_list[random.randint(0,len(city_list)-1)]\n",
     "    year=random.randint(1990,2025)\n",
@@ -185,28 +176,15 @@
     "    time_str='{}-{}-{}'.format(year,month,day)\n",
     "    date_field=time.strftime(Q[1],time.strptime(time_str,'%Y-%m-%d'))\n",
     "    Q=Q[0].format(city=city,year=year,month=month,day=day) # 问题\n",
-    "    A='<xml><city>%s</city><date>%s</date></xml>'%(city,date_field) # 回答\n",
-    "    #A='city:%s\\ndate:%s'%(city,date_field) # 回答\n",
-    "    #A=json.dumps({'city':city,'date':date_field})\n",
-    "    example={\n",
-    "        'id': 'identity_{}'.format(i),\n",
-    "        'conversations':[\n",
-    "            {\n",
-    "                'from':'user',\n",
-    "                'value':prompt_template%(Q,),\n",
-    "            },\n",
-    "            {\n",
-    "                'from':'assistant',\n",
-    "                'value':A,\n",
-    "            },\n",
-    "        ]\n",
-    "    }\n",
-    "    #print(example)\n",
-    "    train_data.append(example)\n",
+    "    A=json.dumps({'city':city,'date':date_field},ensure_ascii=False)  # 回答\n",
     "\n",
-    "with open('train.txt','w',encoding='utf-8') as fp:\n",
-    "    fp.write(json.dumps(train_data))\n",
-    "print('样本数量:',len(train_data))"
+    "    Q_arr.append(prompt_template%(Q,))\n",
+    "    A_arr.append(A)\n",
+    "\n",
+    "import pandas as pd \n",
+    "\n",
+    "df=pd.DataFrame({'Prompt':Q_arr,'Completion':A_arr})\n",
+    "df.to_excel('train.xlsx')"
    ]
   },
   {
@@ -229,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 161,
    "id": "60a4a4f0-32ef-4254-a3f1-31648e580fa6",
    "metadata": {},
    "outputs": [
@@ -237,8 +215,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Try importing flash-attention for faster inference...\n",
-      "Warning: import flash_attn rms_norm fail, please install FlashAttention layer_norm to get higher efficiency https://github.com/Dao-AILab/flash-attention/tree/main/csrc/layer_norm\n"
+      "Try importing flash-attention for faster inference...\n"
      ]
     }
    ],
@@ -254,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 164,
    "id": "5a053c4a-d8b1-44e9-b4f0-0906f9115333",
    "metadata": {},
    "outputs": [
@@ -263,77 +240,49 @@
      "output_type": "stream",
      "text": [
       "Q:2020年4月16号三亚下雨么？\n",
-      "A:<xml><city>三亚</city><date>2020-04-16</date></xml>\n",
-      "XML:city=三亚 date=2020-04-16\n",
+      "A:{\"city\":三亚,\"date\":2020-04-16}\n",
       "\n",
       "Q:青岛3-15号天气预报\n",
-      "A:<xml><city>青岛</city><date>03-15</date></xml>\n",
-      "XML:city=青岛 date=03-15\n",
+      "A:{\"city\": \"青岛\",\"date\": \"03-15\"}\n",
       "\n",
       "Q:5月6号下雪么，城市是威海\n",
-      "A:<xml><city>威海</city><date>05-06</date></xml>\n",
-      "XML:city=威海 date=05-06\n",
+      "A:{\"city\":威海,\"date\":05-06}\n",
       "\n",
       "Q:青岛2023年12月30号有雾霾么?\n",
-      "A:<xml><city>青岛</city><date>2023-12-30</date></xml>\n",
-      "XML:city=青岛 date=2023-12-30\n",
+      "A:{\"city\": \"青岛\",\"date\": \"2023-12-30\"}\n",
       "\n",
       "Q:我打算6月1号去北京旅游，请问天气怎么样？\n",
-      "A:<xml><city>北京</city><date>06-01</date></xml>\n",
-      "XML:city=北京 date=06-01\n",
+      "A:{\"city\": \"北京\",\"date\": \"06-01\"}\n",
       "\n",
       "Q:你们打算1月3号坐哪一趟航班去上海？\n",
-      "A:<xml><city>上海</city><date>01-03</date></xml>\n",
-      "XML:city=上海 date=01-03\n",
+      "A:{\"city\": \"上海\",\"date\": \"01-03\"}\n",
       "\n",
       "Q:小明和小红是8月8号在上海结婚么?\n",
-      "A:<xml><city>上海</city><date>08-08</date></xml>\n",
-      "XML:city=上海 date=08-08\n",
+      "A:{\"city\": \"上海\",\"date\": \"08-08\"}\n",
+      "\n",
+      "Q:一起去东北看冰雕么，大概是1月15号左右，我们3个人一起\n",
+      "A:{\"city\": \"东北\", \"date\": \"01-15\"}\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "import xml.etree.ElementTree as ET\n",
-    "\n",
     "model.generation_config.top_p=0 # 只选择概率最高的token\n",
     "\n",
-    "Q_list=['2020年4月16号三亚下雨么？','青岛3-15号天气预报','5月6号下雪么，城市是威海','青岛2023年12月30号有雾霾么?','我打算6月1号去北京旅游，请问天气怎么样？','你们打算1月3号坐哪一趟航班去上海？','小明和小红是8月8号在上海结婚么?']\n",
+    "Q_list=['2020年4月16号三亚下雨么？','青岛3-15号天气预报','5月6号下雪么，城市是威海','青岛2023年12月30号有雾霾么?','我打算6月1号去北京旅游，请问天气怎么样？','你们打算1月3号坐哪一趟航班去上海？','小明和小红是8月8号在上海结婚么?',\n",
+    "        '一起去东北看冰雕么，大概是1月15号左右，我们3个人一起']\n",
     "for Q in Q_list:\n",
     "    prompt=prompt_template%(Q,)\n",
     "    A,hist=model.chat(tokenizer,prompt,history=None)\n",
-    "    root=ET.fromstring(A)\n",
-    "    city=root.find('city').text\n",
-    "    date=root.find('date').text\n",
-    "    print('Q:%s\\nA:%s\\nXML:city=%s date=%s\\n'%(Q,A,city,date))"
+    "    print('Q:%s\\nA:%s\\n'%(Q,A))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "id": "39e860c1-4572-456d-aedc-703f192f599a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "青岛海边钓鱼需要注意以下几点：\n",
-      "\n",
-      "1. 遵守规定：在青岛海边钓鱼，必须遵守当地的法律法规和公园管理规定。禁止在禁钓区钓鱼，禁止破坏海洋生态环境。\n",
-      "\n",
-      "2. 穿戴合适的装备：为了保护自己免受海风、海水和阳光的伤害，建议穿着适合海滩环境的衣物，如短袖、长裤、防晒帽等。\n",
-      "\n",
-      "3. 注意安全：在海边钓鱼时，要注意自身安全，避免发生溺水事故。同时，也要注意周围环境的安全，避免被风吹倒或被海浪冲走。\n",
-      "\n",
-      "4. 选择合适的地点：青岛海边有多个不同的钓鱼地点，可以根据自己的喜好和经验选择合适的地点。一般来说，选择靠近海岸线的地方更容易找到鱼儿。\n",
-      "\n",
-      "5. 注意天气变化：青岛海边的天气变化非常快，因此在钓鱼前要关注天气预报，以便及时调整钓鱼计划。\n",
-      "\n",
-      "6. 尊重自然：青岛海边是大自然的一部分，我们应该尊重自然，不要随意破坏海洋生态环境。\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "prompt='青岛海边钓鱼需要特别注意什么？'\n",
     "resp,hist=model.chat(tokenizer,prompt,history=None)\n",
